--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gesture Journey | Home (World Map Background)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="Sulu2.css" rel="stylesheet">
+    <link href="homepage.css" rel="stylesheet">
 
     </head>
 <body>
@@ -37,11 +37,11 @@
 
         <nav class="my-3 my-md-4" style="z-index: 11;">
             <ul class="nav nav-pills nav-pills-cartoon">
-                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="explorer.html">🔍 Explore!</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="passport.html">🛂 Passport</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="simulator.html">🙈 Simulator!</a></li>
-                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="quiz.html">✨ Quiz Time!</a></li>
-                <li class="nav-item ms-3"><a class="btn login-btn-cartoon" href="login.html">🔑 Login!</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="/web-final/explorer/explorer.html">🔍 Explore!</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="/web-final/passport/passport.html">🛂 Passport</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="/web-final/simulator-quiz/simulator.html">🙈 Simulator!</a></li>
+                <li class="nav-item"><a class="nav-link nav-link-cartoon" href="/web-final/simulator-quiz/quiz.html">✨ Quiz Time!</a></li>
+                <li class="nav-item ms-3"><a class="btn login-btn-cartoon" href="/web-final/passport/sign.html">🔑 Login!</a></li>
             </ul>
         </nav>
 
@@ -66,7 +66,7 @@
         </div>
 
         <div id="cta-frame">
-            <a href="explorer.html" class="btn btn-cta-giant" id="startButton">
+            <a href="explorer/explorer.html" class="btn btn-cta-giant" id="startButton">
                 Start Your Gesture Journey!
             </a>
         </div>
