--- a/simulator-quiz/simulator.html
+++ b/simulator-quiz/simulator.html
@@ -1,95 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gesturverse | Miscommunication Simulator</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/web-final/simulator-quiz/css/simulator.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gesturverse | Miscommunication Simulator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Karla:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/web-final/main.css"> 
+    <link rel="stylesheet" href="/web-final/simulator-quiz/css/simulator.css"> 
 </head>
 
 <body>
-  <header>
-    <nav class="container d-flex justify-content-between align-items-center py-3">
-      <a href="index.html" class="fw-bold text-decoration-none">Gesturverse Heritage</a>
-      <div>
-        <a href="explorer.html" class="me-3 text-decoration-none">Explorer</a>
-        <a href="simulator.html" class="me-3 text-decoration-none fw-bold text-primary">Simulator</a>
-        <a href="quiz.html" class="text-decoration-none">Quiz</a>
-      </div>
-    </nav>
-  </header>
+    <header class="site-title-bar w-100">
+        <nav class="container-fluid">
+            <div class="d-flex justify-content-between align-items-center py-3 px-3 px-md-5">
+                <a class="fs-4 fw-bold text-decoration-none" href="/web-final/index.html">
+                    <span style="color: var(--color-primary); font-size: 1.5em;">✨</span> <span style="font-family: var(--font-header);">Gesturverse</span>
+                </a>
+                
+                <div class="d-none d-md-flex align-items-center">
+                    <a class="me-4" href="/web-final/explorer/explorer.html">Explorer</a>
+                    <a class="me-4" href="/web-final/simulator-quiz/quiz.html">Quiz</a>
+                    <a class="me-4" href="simulator.html" style="font-weight: bold;">Simulator</a>
+                    <div id="auth-link-placeholder" class="d-flex align-items-center"></div>
+                </div>
+                <div class="form-check form-switch d-flex align-items-center">
+                    <span id="modeIcon" class="me-2 fs-5" style="color: var(--color-secondary);">☀️</span>
+                    <input class="form-check-input" type="checkbox" role="switch" id="darkModeToggle">
+                </div>
+            </div>
+        </nav>
+    </header>
 
-  <!-- main simulator content -->
-  <main class="my-5">
-    <div class="container">
-      <div id="main-title-box" class="text-center p-3">
-        <h1>Miscommunication Simulator</h1>
-      </div>
-
-      <!-- scenario selection -->
-      <section class="simulator-section p-4 border rounded shadow-sm bg-light">
-        <div id="scenario-selector" class="mb-5 text-center p-3">
-          <h3 class="mb-4">Choose Your Scenario:</h3>
-
-          <div class="row justify-content-center g-3">
-            <div class="col-md-5">
-              <label for="gesture-select" class="form-label fw-bold">Select Gesture</label>
-              <select id="gesture-select" class="form-select form-select-lg">
-                <option value="" disabled selected>Choose a gesture...</option>
-                <option value="thumbsUp">👍 Thumbs Up</option>
-              </select>
+    <main class="my-5">
+        <div class="container">
+            <div id="main-title-box" class="text-center p-3 mb-5">
+                <h1>Cultural Miscommunication Simulator 🎭</h1>
+                <p class="text-center fs-6" style="color: var(--color-text); font-style: italic;">
+                    Witness cultural blunders in action and learn the hard way!
+                </p>
             </div>
 
-            <div class="col-md-5">
-              <label for="region-select" class="form-label fw-bold">Select Region</label>
-              <select id="region-select" class="form-select form-select-lg" disabled>
-                <option value="" disabled selected>Choose a region...</option>
-              </select>
-            </div>
-          </div>
+            <section id="scenario-selector" class="simulator-section mx-auto mb-5" style="max-width: 700px;">
+                <h3 class="text-center mb-4" style="color: var(--color-secondary);">Choose Your Mistake:</h3>
+                
+                <div class="mb-3">
+                    <label for="gesture-select" class="form-label fw-bold">Select a Gesture:</label>
+                    <select id="gesture-select" class="form-select input-field"></select>
+                </div>
+                <div class="mb-5">
+                    <label for="region-select" class="form-label fw-bold">Select a Region to Offend:</label>
+                    <select id="region-select" class="form-select input-field" disabled></select>
+                </div>
 
-          <button id="start-simulation-btn" class="btn btn-success btn-lg mt-5 shadow" disabled>
-            START SIMULATION
-          </button>
+                <div class="text-center">
+                    <button id="start-simulation-btn" class="btn btn-lg px-5 shadow-lg" disabled>
+                        Start Misunderstanding!
+                    </button>
+                </div>
+            </section>
+
+            <div id="simulator-container" class="text-center" style="display: none;">
+                <h2 id="scenario-caption" class="mb-4 text-center" style="color: var(--color-text); font-style: italic; font-weight: 500;"></h2>
+
+                <div id="comic-panel-grid" class="row justify-content-center g-3 mx-auto" style="max-width: 900px;">
+                    <div id="block-1" class="col-md-4 comic-block p-2">
+                        <img id="img-1" class="img-fluid reveal" src="" alt="Tourist action">
+                        <p id="text-1" class="comic-caption"></p>
+                    </div>
+
+                    <div id="block-2" class="col-md-4 comic-block p-2">
+                        <img id="img-2" class="img-fluid reveal" src="" alt="Local reaction">
+                        <p id="text-2" class="comic-caption"></p>
+                    </div>
+
+                    <div id="block-3" class="col-md-4 comic-block p-2">
+                        <img id="img-3" class="img-fluid reveal" src="" alt="Cultural lesson">
+                        <p id="text-3" class="comic-caption"></p>
+                    </div>
+                </div>
+
+                <div id="final-message-box" class="alert mt-5 p-4 mx-auto" style="display: none; max-width: 900px;">
+                </div>
+                <div class="mt-5">
+                    <button id="restart-btn" class="btn btn-lg px-5 shadow-lg" style="display: none;">
+                        Try Another Scenario
+                    </button>
+                </div>
+            </div>
+
         </div>
+    </main>
 
-        <!-- simulator panels -->
-        <div id="simulator-container" class="text-center" style="display: none;">
-          <!-- comic panels -->
-          <div id="comic-panel-grid" class="row justify-content-center g-3 mx-auto" style="max-width: 900px;">
-            <div id="block-1" class="col-md-4 comic-block p-2">
-              <img id="img-1" class="img-fluid reveal" src="" alt="Tourist action">
-              <p id="text-1" class="comic-caption"></p>
-            </div>
-
-            <div id="block-2" class="col-md-4 comic-block p-2">
-              <img id="img-2" class="img-fluid reveal" src="" alt="Local reaction">
-              <p id="text-2" class="comic-caption"></p>
-            </div>
-
-            <div id="block-3" class="col-md-4 comic-block p-2">
-              <img id="img-3" class="img-fluid reveal" src="" alt="Cultural lesson">
-              <p id="text-3" class="comic-caption"></p>
-            </div>
-          </div>
-
-          <!-- final message -->
-          <div id="final-message-box" class="alert alert-info mt-5 p-4 mx-auto" style="display: none; max-width: 900px;">
-          </div>
-
-          <!-- restart button -->
-          <div class="mt-5">
-            <button id="restart-btn" class="btn btn-warning btn-lg px-5 shadow-lg" style="display: none;">
-              Try Another Scenario
-            </button>
-          </div>
-        </div>
-      </section>
-    </div>
-  </main>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/simulator.js"></script>
-</body>
+    <footer class="text-center p-3 mt-auto">
+        <p class="text-sm m-0">© 2025 Gesturverse. Final Project for Web Technologies.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/web-final/theme.js" defer></script> 
+    <script src="/web-final/passport/auth.js" defer></script> <script src="/web-final/simulator-quiz/js/simulator.js" defer></script> </body>
 </html>
