--- a/simulator-quiz/quiz.html
+++ b/simulator-quiz/quiz.html
@@ -12,25 +12,43 @@
     <script src="/web-final/theme.js" defer></script>
 </head>
 <body>
-    <header class="site-title-bar w-100">
-        <nav class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center py-3 px-3 px-md-5">
-                <a class="fs-4 fw-bold text-decoration-none" href="/web-final/index.html">
-                    <span style="color: var(--color-primary); font-size: 1.5em;">✨</span> <span style="font-family: var(--font-header);">Gesturverse</span>
-                </a>
-                <div class="d-none d-md-flex align-items-center">
-                    <a class="me-4" href="/web-final/explorer/explorer.html">Explorer</a>
-                    <a class="me-4" href="quiz.html">Quiz</a>
-                    <a class="me-4" href="simulator.html">Simulator</a>
-                    <a class="me-4 btn btn-sm" style="background-color: var(--color-secondary); color: white;" href="/web-final/passport/passport.html">My Passport 🛂</a>
-                </div>
-                <div class="form-check form-switch d-flex align-items-center">
-                    <span id="modeIcon" class="me-2 fs-5" style="color: var(--color-secondary);">☀️</span>
-                    <input class="form-check-input" type="checkbox" role="switch" id="darkModeToggle">
-                </div>
-            </div>
-        </nav>
-    </header>
+<header class="site-title-bar w-100">
+  <nav class="navbar navbar-expand-md bg-transparent">
+    <div class="container-fluid py-3 px-3 px-md-5">
+      
+      <a class="fs-4 fw-bold text-decoration-none d-flex align-items-center" href="/web-final/index.html">
+        <span style="color: var(--color-primary); font-size: 1.5em;">✨</span>
+        <span style="font-family: var(--font-header); margin-left: 5px;">Gesturverse</span>
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center mt-3 mt-md-0">
+          <li class="nav-item">
+            <a class="nav-link me-md-4" href="/web-final/explorer/explorer.html">Explorer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link me-md-4" href="/web-final/simulator-quiz/quiz.html">Quiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link me-md-4" href="/web-final/simulator-quiz/simulator.html">Simulator</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-sm mt-2 mt-md-0" style="background-color: var(--color-secondary); color: white;" href="/web-final/passport/passport.html">My Passport 🛂</a>
+          </li>
+        </ul>
+      </div>
+      <div class="form-check form-switch d-flex align-items-center ms-3">
+        <span id="modeIcon" class="me-2 fs-5" style="color: var(--color-secondary);">☀️</span>
+        <input class="form-check-input" type="checkbox" role="switch" id="darkModeToggle">
+      </div>
+
+    </div>
+  </nav>
+</header>
 
     <main class="container my-5">
         <div class="main-content p-4 p-md-5 mx-auto" style="max-width: 800px;">
